   want other behavior, pass :USE-HEADER-P T to the function OPEN.

 - ECL now accepts a double dash, '--', as a command line option. Anything
   after the double dash is interpreted as a lisp command.

 - Bytecode functions can now be printed readably as #Y(...). The appropiate
   reader macro has been also implemented (M. Pasternacki)

* ANSI Compatibility:

 - DEFSETF forms are enclosed in a block with the name of the accessor.

 - When supplied a compiled function as second argument, COMPILE returns
   this function. And also when the function is interpreted but we have
   lost its original definition.

 - Now an error is signaled for unmatched parenthesis as in "(1 2 3))".
   The only exception is in the toplevel, where only a warning is issued.

 - The stream argument for DESCRIBE-OBJECT is now a required one, instead of
   an optional.

 - When *PRINT-READABLY*=T, vectors just print as arrays.

 - When used as macro characters, upper and lowercase letters share the same
   dispatcher, so that if the user defines a dispatcher for #f, it is
   automagically set for #F and viceversa.

* MOP Compatibility:

 - We have implemented the *-SLOT-DEFINITION classes, as well as the protocol
   for computing effective slot definitions from direct ones, and the methods
   DIRECT/EFFECTIVE-SLOT-DEFINITION-CLASS. (Position field in slot-def. objects
   still missing).

 - CLASS-PROTOTYPE is now only a reader.

* Contributed modules:

 - MIT test unit rt.lisp is now available as #p"sys:rt"

 - SBCL sockets have been ported to unix (J. Stecklina) and to windows
   (M. Goffioul) and are built when using the configuration option --with-tcp.
   Both INET and Unix sockets are implemented. Under windows Unix sockets are
   simulated the cygwin way (i.e. creating a file with the address and port
   of a INET socket), and we also offer the possibility of creating named
   pipes.

 - SBCL's implementation of PROVIDE/REQUIRE is now in ECL. By default, modules